# webai

./: AGENTS.md  README.md
app/: .env.example  config.py  main.py  pyproject.toml  start_env.sh
app/internal/: db_init.py  models.py
app/migrations/: env.py
app/migrations/versions/: fad2d940fc65_create_core_tables.py
app/routers/: user.py
app/routers/schemas/: login.py
app/utils/: auth.py
docs/: API_DESIGN.md  ARCHITECTURE.md  DB_SCHEMA.md  DEVELOPMENT_SPEC.md  FRONTEND_SPEC.md  PLATFORM_DESIGN.md  ROADMAP.md  SECURITY_RISK_CONTROL.md  TOKEN_DESIGN.md  WORKLOG.md
frontend/: package-lock.json  package.json
frontend/src/routes/app/chat/: +page.svelte
